--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_effe11ea53ac5fc?reconnect=true
-spring.datasource.username=b5f27c4ddcbd59
-spring.datasource.password=33ecad07
+spring.datasource.url=${APP_DATABASE_URL}
+spring.datasource.username=${APP_DATABASE_USERNAME}
+spring.datasource.password=${APP_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.database=MYSQL
