--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
+# !**/src/main/**
 !**/src/test/**
 
 ### STS ###
@@ -29,5 +29,4 @@ build/
 
 ### VS Code ###
 .vscode/
-src/
 src/main/resources/application.properties
