--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bap
-spring.datasource.username=hexakomb
-spring.datasource.password=hexakomb
+spring.datasource.url=jdbc:mysql://bapdb:3306/bap
+spring.datasource.username=root
+spring.datasource.password=esteem
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
