--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bap
-spring.datasource.username=hexakomb
-spring.datasource.password=hexakomb
+spring.datasource.url=${APP_DATABASE_URL}
+spring.datasource.username=${APP_DATABASE_USERNAME}
+spring.datasource.password=${APP_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
